--- a/site/onepage.css
+++ b/site/onepage.css
@@ -318,13 +318,16 @@ body.side-panel-left.side-push-panel.side-panel-open.stretched #header .containe
 
 /* Border Form Design
 ---------------------------------------------------------------------------- */
-
+.bgroxo {
+	background-color: #553f6e;
+	width:100%;
+}
 .border-form-control {
 	height: 48px;
 	padding: 8px 4px;
 	font-size: 21px;
 	letter-spacing: 1px;
-	background-color: transparent !important;
+	background-color: #553f6e !important;
 	border-top: transparent;
 	border-right: transparent;
 	border-left: transparent;
@@ -707,4 +710,3 @@ textarea.border-form-control {
 	.overlay-menu #primary-menu.dark ul { background-color: transparent; }
 
 }
-
