--- a/style.css
+++ b/style.css
@@ -13628,3 +13628,30 @@ body:not(.no-transition) #wrapper,
     background-color:#fff;
     color:#000;
 }
+/*
+
+.icon-overlay,
+.icon-overlay:before {
+	opacity: 0;
+	position: absolute;
+	z-index: 2;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	text-align: center;
+}
+
+body:not(.device-touch) .icon-overlay {
+	-webkit-transition: opacity .3s ease;
+	-o-transition: opacity .3s ease;
+	transition: opacity .3s ease;
+}
+
+.icon-overlay:before {
+	content: '';
+	z-index: auto;
+	background-color: #FFF;
+	opacity: 0.75;
+}
+.icon:hover .icon-overlay { opacity: 1; }*/
