--- a/css/fonts.css
+++ b/css/fonts.css
@@ -60,7 +60,7 @@ label,
 body { line-height: 1.5; }
 
 h1,
-h2,
+
 h3,
 h4,
 h5,
@@ -68,6 +68,13 @@ h6 {
 	font-weight: 600;
 	line-height: 1.5;
 	letter-spacing: 0px;
+}
+
+
+h2 {
+	font-weight: 600;
+	line-height: 1.5;
+	letter-spacing: -1px;
 }
 
 #logo {
