--- a/site/css/fonts.css
+++ b/site/css/fonts.css
@@ -44,6 +44,9 @@ label,
 .nav-tree li a,
 .wedding-head .first-name,
 .wedding-head .last-name,
-.font-primary { font-family: 'Source Sans Pro', sans-serif; }
+.font-primary { font-family: 'Roboto', sans-serif; }
 
+.details h4, .hover-detail h3 {
+  font-family: 'Source Sans Pro', sans-serif!important;
 
+}
