--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ span.middot {
 
 .noradius { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; -ms-border-radius: 0 !important; -o-border-radius: 0 !important; border-radius: 0 !important; }
 
-.col-padding { padding: 60px; }
+.col-padding { padding: 20px; }
 
 .nopadding { padding: 0 !important; }
 
@@ -13647,11 +13647,12 @@ color: #fff!important;
 opacity: .9;
 margin-left: auto;
 margin-right: auto;
+margin-top: auto;
+margin-bottom: auto;
 max-width: 100%;
 max-height: 100%;
 font-size: 100%!important;
 text-size-adjust: 100%!important;
-
 
 
 	}
@@ -13688,13 +13689,14 @@ display: none;
 }
 .padadd{
 
-	padding-top: 12%;
-	padding-bottom: : 24%;
+	padding-top: 2%;
+	padding-bottom: 10%;
 	border-bottom: 2px solid #fff;
 	max-width: 7%;
+	max-height: 7%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 15%;
+	margin-bottom: 14%;
 
 }
 
