--- a/style.css
+++ b/style.css
@@ -7484,8 +7484,8 @@ body:not(.device-touch) .button.button-full strong {
 
 .feature-box {
 	position: relative;
-	margin-top: 20px;
-	padding: 0 0 0 80px;
+	margin-top: 75px;
+	padding: auto;
 }
 
 .feature-box:first-child { margin-top: 0; }
@@ -7700,7 +7700,7 @@ body:not(.device-touch) .button.button-full strong {
 .feature-box.fbox-plain.fbox-small h3 {
 	font-size: 15px;
 	line-height: 26px;
-	margin-bottom: 10px;
+	margin: auto;
 }
 
 .feature-box.fbox-plain.fbox-small p { margin-left: -42px; }
@@ -10565,7 +10565,9 @@ blockquote.pull-right {
 
 .owl-carousel .owl-item img {
 	display:block;
-	width:60%;
+	width:90%;
+	padding: 10%;
+	margin: auto;
 	-webkit-transform-style:preserve-3d;
 }
 
@@ -13653,6 +13655,9 @@ max-width: 100%;
 max-height: 100%;
 font-size: 100%!important;
 text-size-adjust: 100%!important;
+-webkit-box-shadow: inset 0px 0px 23px -12px rgba(61,60,61,0.97);
+-moz-box-shadow: inset 0px 0px 23px -12px rgba(61,60,61,0.97);
+box-shadow: inset 0px 0px 23px -12px rgba(61,60,61,0.97);
 
 
 	}
@@ -13701,7 +13706,8 @@ display: none;
 }
 
 .logo-topo {
-	max-width: 700px;
+	max-width: 70%;
+	padding-bottom: 10%!important;
 	margin-left: auto;
 	margin-right: auto;
 
