--- a/style.css
+++ b/style.css
@@ -10557,7 +10557,7 @@ blockquote.pull-right {
 
 .owl-carousel .owl-item {
 	position: relative;
-	min-height: 1px;
+	min-height: 10px;
 	float: left;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
@@ -10565,8 +10565,8 @@ blockquote.pull-right {
 
 .owl-carousel .owl-item img {
 	display:block;
-	width:90%;
-	padding: 10%;
+	width:100%;
+	padding: 2%;
 	margin: auto;
 	-webkit-transform-style:preserve-3d;
 }
@@ -10755,7 +10755,7 @@ blockquote.pull-right {
 }
 
 .owl-carousel .owl-nav [class*=owl-]:hover {
-	background-color: #1ABC9C !important;
+	background-color: #e77524 !important;
 	color: #FFF !important;
 	text-decoration: none;
 }
@@ -10780,7 +10780,7 @@ blockquote.pull-right {
 	margin: 0 4px;
 	opacity: 0.5;
 	border-radius: 50%;
-	background-color: #1ABC9C;
+	background-color: #e77524;
 	-webkit-transition: all .3s ease;
 	-o-transition: all .3s ease;
 	transition: all .3s ease;
